edit Sidebar, add collapsed state

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,5 +1,5 @@
 .app.dark {
-  --bg-color: #2b2b2c;
-  --primary-color: #4ec215;
-  --text-color: #aeb0b3;
+  --bg-color: #1F2430;
+  --secondary-color: #1C212D;
+  --text-color: #fff;
 }
