--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,5 +1,5 @@
 .app.light {
-  --bg-color: #e8e8e8;
-  --primary-color: #0800ff;
-  --text-color: #262626;
+  --bg-color: #F3F6F9;
+  --secondary-color: #1C212D;
+  --text-color: #1F2430;
 }
