--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -4,12 +4,18 @@
 @import "themes/dark";
 
 .app {
+  display: flex;
+  width: 100%;
   height: 100%;
   background-color: var(--bg-color);
   color: var(--text-color);
 
-  a {
-    color: var(--primary-color);
+  .content-page {
+    flex-grow: 1;
+
+    &__inner {
+      padding: 30px;
+    }
   }
 }
 
