--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,5 +1,5 @@
 .app.dark {
-  --bg-color: #1F2430;
-  --secondary-color: #1C212D;
-  --text-color: #fff;
+    --bg-color: #1f2430;
+    --secondary-color: #1c212d;
+    --text-color: #fff;
 }
