--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,5 +1,5 @@
 .app.light {
-  --bg-color: #F3F6F9;
-  --secondary-color: #1C212D;
-  --text-color: #1F2430;
+    --bg-color: #f3f6f9;
+    --secondary-color: #1c212d;
+    --text-color: #1f2430;
 }
