--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -11,10 +11,13 @@
     color: var(--text-color);
 
     .content-page {
+        display: flex;
+        flex-direction: column;
         flex-grow: 1;
 
         &__inner {
             padding: 30px;
+            flex: 1;
         }
     }
 }
