--- a/src/widgets/PageError/ui/PageError.module.scss
+++ b/src/widgets/PageError/ui/PageError.module.scss
@@ -3,8 +3,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100%;
 
     h2 {
+        font-size: 24px;
         margin-bottom: 20px;
     }
 }
