add storybook, loki

--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,5 +1,10 @@
 .Button {
+    display: inline-block;
     cursor: pointer;
+    padding: 0 20px;
+    line-height: 44px;
+    min-height: 44px;
+    text-align: center;
 }
 
 .clear {
