--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -1,22 +1,53 @@
 .Navbar {
     padding-top: 30px;
 
-    &__nav {
-        ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
+    ul {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
 
+        li {
+            &:not(:first-child) {
+                margin-top: 20px;
+            }
+
+            svg {
+                width: 25px;
+                height: 25px;
+                fill: var(--primary-color);
+                margin-right: 15px;
+            }
+
+            a {
+                display: flex;
+                align-items: center;
+                text-decoration: none;
+
+                &:hover {
+                    font-weight: bold;
+                }
+
+                span {
+                    opacity: 1;
+                    transition: opacity 0.3s;
+                }
+            }
+        }
+    }
+
+    &.Icon {
+        ul {
             li {
-                &:not(:first-child) {
-                    margin-top: 20px;
+                svg {
+                    margin-right: 0;
                 }
 
                 a {
-                    text-decoration: none;
+                    justify-content: center;
 
-                    &:hover {
-                        font-weight: bold;
+                    span {
+                        width: 0;
+                        opacity: 0;
                     }
                 }
             }
