--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,14 +1,16 @@
 .Button {
+    background: grey;
     display: inline-block;
     cursor: pointer;
     padding: 0 20px;
     line-height: 44px;
-    min-height: 44px;
+    max-height: 44px;
     text-align: center;
+    border: 0;
 }
 
 .clear {
-    background: none;
+    background: transparent;
     border: 0;
     outline: 0;
     padding: 0;
