add testing components TopPanel, Sidebar

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -2,4 +2,6 @@
     --bg-color: #1f2430;
     --secondary-color: #1c212d;
     --text-color: #fff;
+    --btn-color: #12151e;
+    --btn-text-color: #fff;
 }
