--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -2,4 +2,6 @@
     --bg-color: #f3f6f9;
     --secondary-color: #1c212d;
     --text-color: #1f2430;
+    --btn-color: #1f2430;
+    --btn-text-color: #f3f6f9;
 }
