--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,7 +1,10 @@
 :root {
+    --bg-color: #f3f6f9;
+    --text-color: #1f2430;
     --font-size: 17px;
     --font-famaly: "Consolas";
     --primary-color: #ffd831;
+    --modal-z-index: 100;
 }
 
 html,
